<resources>
    <string name="app_name">GGTimingSystem</string>
    <string name="home_title">Upcoming Runs</string>
    <string name="date">xxx 00, 0000</string>
    <string name="time">00:00 am</string>
    <string name="timeUntilStart">Starts in x minutes</string>
    <string name="distance">x km</string>
    <string name="attendance">0/100</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>