<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Main.RunDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tVDate"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tVTime"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:paddingTop="20sp"
            android:text="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVDate" />

        <TextView
            android:id="@+id/tVStartWarning"
            style="@style/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeUntilStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVTime" />

        <TextView
            android:id="@+id/tVMiles"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.678"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVStartWarning" />

        <TextView
            android:id="@+id/tVPeople"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVMiles" />

        <LinearLayout
            android:layout_width="404dp"
            android:layout_height="253dp"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVPeople">

            <Button
                android:id="@+id/btnJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:padding="40sp"
                android:text="Join Run"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/warning"
                android:padding="40sp"
                android:text="Leave"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/lightBlue"
                android:padding="40sp"
                android:text="Check-In"
                android:textSize="25sp"
                android:visibility="visible" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:src="@drawable/ic_baseline_transfer_within_a_station_24"
            app:layout_constraintBottom_toBottomOf="@+id/tVMiles"
            app:layout_constraintEnd_toStartOf="@+id/tVMiles"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tVMiles"
            app:layout_constraintVertical_bias="0.552" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="69dp"
            android:src="@drawable/ic_baseline_people_24"
            app:layout_constraintBottom_toBottomOf="@+id/tVPeople"
            app:layout_constraintEnd_toStartOf="@+id/tVPeople"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tVPeople"
            app:layout_constraintVertical_bias="0.473" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:src="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="@+id/tVTime"
            app:layout_constraintEnd_toStartOf="@+id/tVTime"
            app:layout_constraintHorizontal_bias="0.786"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>